fixed code block horizontal scroll; added line numbers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --copy-btn-margin: 10px;
-}
-
 @layer base {
   @font-face {
     font-family: "Atkinson";
@@ -196,21 +192,6 @@ article img {
 
 #meteors .shower.ul {
   @apply rotate-315;
-}
-
-.copy-cnt {
-  @apply absolute w-full;
-  top: var(--copy-btn-margin);
-}
-
-.copy-btn {
-  @apply fixed w-[30px];
-  left: calc(100% - var(--copy-btn-margin));
-  transform: translateX(-100%);
-}
-
-.copy-svg {
-  @apply aspect-square w-full text-white opacity-70 hover:opacity-90;
 }
 
 /* Card transition */
